--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,8 @@ en:
   users:
     create:
       welcome_to_pet_spa_house: "Welcome to the Pet spa house!"
+      please_check_your_email_to_activate_your_account:
+        "Please check your email to activate your account"
     new:
       sign_up: "Sign up"
       this_will_be_a_signup_page_for_new_users:
@@ -107,9 +109,52 @@ en:
     create:
       invalid_email_or_password_combination:
         "Invalid email/password combination"
+      account_not_activated: "Account not activated!"
+      check_ur_email_for_the_activation_link: " Check your email for the activation link."
     new:
       log_in: "Log in"
       sign_up_now: "Sign up now!"
       new_user: "New user?"
       remember_me_on_this_computer: "Remember me on this computer"
       forgot_password: "(Forgot password?)"
+  user_mailer:
+    account_activation:
+      pet_spa: "Pet spa"
+      hi: "Hi,"
+      welcome_to_the_pet_spa_click_the_link_to_activate_your_account:
+        "Welcome to the Pet Spa! Click on the link below to activate your account:"
+      active: "Activate"
+    password_reset:
+      password_reset: "Password reset"
+      reset_password: "Reset password"
+      this_link_expire_in_two_hours: "This link will expire in two hours."
+      click_the_link_to_reset_password:
+        "To reset your password click the link below:"
+      if_not_request_password_to_reset_ignore_this_email_and_password:
+        "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+
+  account_activations:
+    edit:
+      account_activation: "Account activation"
+      invalid_activation_link: "Invalid activation link"
+
+  password_resets:
+    create:
+      email_sent_with_password_reset_instructions:
+        "Email sent with password reset instructions"
+      email_address_not_found: "Email address not found"
+    update:
+      not_empty: "can't be empty"
+      reset_succeed: "Password has been reset."
+    show:
+      password_expired: "Password reset has expired."
+      user_not_found: "User not found"
+      user_not_active: "User haven't activated"
+    edit:
+      reset_password: "Reset password"
+      shared_error_messages: "shared/error_messages"
+      update_pass: "Update password"
+      confirmation: "Confirmation"
+    new:
+      forgot_password: "Forgot password"
+      submit: "Submit"
