--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,21 @@
 en:
   layouts:
     PetSpaManage: "PetSpaManage"
+    admin:
+      header:
+        title: "Admin Pets spa"
+        change_password: "Change password"
+        log_out: "Logout"
+      sidebar:
+        dashboard: "Dashboard"
+        manage_content: "MANAGE CONTENT"
+        posts: "Posts"
+        comments: "Comments"
+        likes: "Likes"
+        services: "Services"
+        orders: "Orders"
+        users: "Users"
+        stats: "STATS"
   users:
     create:
       welcome_to_pet_spa_house: "Welcome to the Pet spa house!"
@@ -107,6 +122,16 @@ en:
         content: "Content"
         sumary: "Sumary"
         created_at: "Create at"
+    services:
+      index:
+        services: "All services"
+        stt: STT
+        service_name: "Service name"
+        status: "Status"
+        search: "Search"
+        price: "Price"
+        des: "Description"
+        created_at: "Created at"
         action: "Action"
         delete: "Delete"
         edit: "Edit"
@@ -138,7 +163,19 @@ en:
       destroy:
         user_delete_succeed: "User delete succeed"
         user_delete_failed: "User delete failed"
-
+        delete_fail: "Delete fail"
+        not_found_service: "Service doesn't exist"
+        add: "Add new item"
+      update:
+        success: "Update success"
+      destroy:
+        success: "delete success"
+        fail: "delete fail"
+      edit:
+        title: "Edit service"
+        update: "Update"
+        public: "Public"
+        pending: "Pending"
   static_pages:
     home:
       title: "Pet spa"
@@ -185,12 +222,10 @@ en:
         "To reset your password click the link below:"
       if_not_request_password_to_reset_ignore_this_email_and_password:
         "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
-
   account_activations:
     edit:
       account_activation: "Account activation"
       invalid_activation_link: "Invalid activation link"
-
   password_resets:
     create:
       email_sent_with_password_reset_instructions:
